--- a/mi/css/mix3jly.css
+++ b/mi/css/mix3jly.css
@@ -585,6 +585,7 @@
 .hed .search-text:focus~.search-keyword-list{
 	display: block;
 	border-color: #ff6700;
+	z-index: 999
 }
 .hed .search-keyword-list .keyword-item{
 	height: 30px;
@@ -627,6 +628,9 @@
 .img-video .carousel .carousel-imgs .carousel-imgs-item img{
 	width: 100%;
 	height: 100%;	
+}
+.img-video .carousel .carousel-imgs .carousel-imgs-item img:hover{
+	cursor: pointer;
 }
 .img-video .carousel .left-arrow{
 	position: relative;
@@ -754,15 +758,19 @@
 	width: 100%;
 	height: 600px;
 	background: red;
-
+	z-index: 99
 }
 .img-video .img-video-list .mix3-sp video{
 	width: 100%;
 	height: 800px;
+	z-index: 99
+}
+.img-video .img-video-list .mix3-sp video:hover{
+	cursor: pointer;
 }
 .img-video .img-video-list .img-7{
 	width: 100%;
-	height: 1000px;
+	height: 1004px;
 }
 .img-video .img-video-list .img-7 .img-7-word1{
 	color: #bf9f73;
@@ -1053,6 +1061,7 @@
 	position: absolute;
 	top:180px;
 	left:1390px;
+	z-index: 99
 }
 .img-video .img-video-list .img-17:hover{
 	cursor: pointer;
