--- a/mi/css/index.css
+++ b/mi/css/index.css
@@ -300,7 +300,7 @@
 		display: block;
 		width: 100%;
 		height: 100%;
-		background-image: url(../images/logo.png);
+		background-image: url(../imagesjrx/logo.png);
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
 		text-indent: -999em;
@@ -459,6 +459,13 @@
 	}
 	.home .banner .cate .cate-item:hover{
 		background: #ff6700;
+	}
+	.home .banner .cate .cate-item a{
+		position: relative;
+		display: block;
+		font-size: 14px;
+		color: #fff;
+
 	}
 	.home .banner .cate .cate-item i{
 		float: right;
@@ -893,7 +900,7 @@
 		height: 57px;
 		margin-right: 10px;
 		background-color: #ff6700;
-		background-image: url(../images/logo.png);
+		background-image: url(../imagesjrx/logo.png);
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
@@ -928,7 +935,7 @@
 	}
 	.end .slogan{
 		height: 60px;
-		background-image: url(../images/slogan.png);
+		background-image: url(../imagesjrx/slogan.png);
 		background-repeat: no-repeat;
 		background-position: center bottom;
 	}
