--- a/mi/css/tuangoujrx.css
+++ b/mi/css/tuangoujrx.css
@@ -65,7 +65,7 @@
 		display: block;
 		width: 55px;
 		height: 100%;
-		background:  #ff6700 url(../images/logo.png) 50% 50% no-repeat;
+		background:  #ff6700 url(../imagesjrx/logo.png) 50% 50% no-repeat;
 		text-indent: -999em;		
 	}
 	.header .header-logo .qiyelogo{
@@ -75,7 +75,7 @@
 		height: 50px;
 		margin-left: 13px;
 		margin-top: 7px;
-		background: url(../images/qiyelogo.png) 50% 50% no-repeat;
+		background: url(../imagesjrx/qiyelogo.png) 50% 50% no-repeat;
 	}
 	.header .header-nav{
 		float: left;
@@ -219,16 +219,16 @@
 		margin-top: 2px;
 	}
 	.home .sider .sider-bottom ul .img1{
-		background: url(../images/sprite.png) 0px center no-repeat;
+		background: url(../imagesjrx/sprite.png) 0px center no-repeat;
 	}
 	.home .sider .sider-bottom ul .img2{
-		background: url(../images/sprite.png) -23px center no-repeat;
+		background: url(../imagesjrx/sprite.png) -23px center no-repeat;
 	}
 	.home .sider .sider-bottom ul .img3{
-		background: url(../images/sprite.png) -46px center no-repeat;
+		background: url(../imagesjrx/sprite.png) -46px center no-repeat;
 	}
 	.home .sider .sider-bottom ul .img4{
-		background: url(../images/sprite.png) -69px center no-repeat;
+		background: url(../imagesjrx/sprite.png) -69px center no-repeat;
 	}
 	.home .sider .sider-bottom ul .text{
 		width: 120px;
@@ -410,7 +410,7 @@
 		line-height: 50px;
 	}
 	.footer .step{
-		background: url(../images/step.jpg) 50% 0 no-repeat;
+		background: url(../imagesjrx/step.jpg) 50% 0 no-repeat;
 		width: 758px;
 		height: 104px;
 		margin: 56px auto 20px;
@@ -461,7 +461,7 @@
 		height: 57px;
 		margin-right: 10px;
 		background-color: #ff6700;
-		background-image: url(../images/logo.png);
+		background-image: url(../imagesjrx/logo.png);
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
@@ -500,7 +500,7 @@
 	}
 	.end2 .slogan{
 		height: 60px;
-		background-image: url(../images/slogan.png);
+		background-image: url(../imagesjrx/slogan.png);
 		background-repeat: no-repeat;
 		background-position: center bottom;
 	}
