--- a/mi/css/common.css
+++ b/mi/css/common.css
@@ -21,3 +21,40 @@ a{
 a:hover{
 	color: #fff;
 }
+.loader{
+	position: relative;
+	width: 4px;
+	height: 20px;
+	background-color: #ff6700;
+	margin: 0 auto;
+	animation: loading 0.5s linear 0s infinite alternate;
+}
+.loader:after,.loader:before{
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: '';
+	width: 4px;
+	height: 20px;
+	background-color: #ff6700;
+}
+.loader:after{
+	margin-left: 10px;
+	transform: scale(1,0.5);
+	animation: loading 0.5s linear 0.5s infinite alternate;
+}
+.loader:before{
+	margin-left: -10px;
+	transform: scale(1,0.3);
+	animation: loading 0.5s linear 0.3s infinite alternate;
+}
+@keyframes loading{
+	from{
+	opacity: 0.5;
+	transform: scale(1,0.5);
+	}
+	to{
+	opacity: 1;
+	transform: scale(1,1);
+	}
+}
