--- a/mi/css/index.css
+++ b/mi/css/index.css
@@ -346,11 +346,12 @@
 		position: absolute;
 		top: 100px;
 		width: 100%;
-		height: 230px;
-		border-top: 1px solid #ccc;
+		height: 0;
+		/*border-top: 1px solid #ccc;*/
 		z-index: 1000;
 		background-color: #fff;
 		box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+		overflow: hidden;
 	}
 	.header .header-nav-content li{
 		position: relative;
