--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -59,6 +59,7 @@
 		margin: 0 0.5em;
 	}
 	.top .cart{
+		position: relative;
 		float: right;
 		width: 120px;
 		background: #424242;
@@ -74,13 +75,32 @@
 		font-size: 20px;
 		vertical-align: -4px;
 	}
-	.top .cart .cart-box a:hover{
-		background: #fff;
-		color: #ff6700;
+	.top .cart .cart-content{
+		position: absolute;
+		top: 40px;
+		right: 0;
+		width: 300px;
+		height: 0;
+		z-index: 999;
+		text-align: center;
+		background-color: #fff;
+		box-shadow: 0px 2px 10px rgba(0,0,0,0.15);
+		overflow: hidden;
+	}
+	.top .cart .cart-content .loader{
+		display: none;
+		margin-top: 40px;
+	}
+	.top .cart .cart-content .empty-cart{
+		display: none;
+		margin-top: 40px;
+		font-size: 12px;
+		font-weight: 400;
 	}
 /*顶部区域结束*/
 /*头部区域开始*/
 	.header{
+		position: relative;
 		height: 100px;
 	}
 	.header .logo{
@@ -125,6 +145,136 @@
 	}
 	.header .header-nav .header-nav-item a:hover{
 		color: #ff6700;
+	}
+	.header .header-nav-content{
+		position: absolute;
+		top: 100px;
+		width: 100%;
+		height: 0;
+		/*border-top: 1px solid #ccc;*/
+		z-index: 1000;
+		background-color: #fff;
+		box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+		overflow: hidden;
+	}
+	.header .header-nav-content li{
+		position: relative;
+		float: left;
+		width: 200px;
+		height: 100%;
+		text-align: center;
+
+	}
+	.header .header-nav-content li .img-box{
+		width: 100%;
+		height: 100px;
+		margin-top: 30px;
+		border-right: 1px solid #ccc;
+	}
+	.header .header-nav-content li .img-box img{
+		width: 100px;
+		height: 100%;
+	}
+	.header .header-nav-content .product-name{
+		font-size: 12px;
+	}
+	.header .header-nav-content .product-price{
+		font-size: 12px;
+		color: #ff6700;
+	}
+	.header .header-nav-content .tag{
+		position: absolute;
+		top: -1px;
+		left: 50%;
+		width: 70px;
+		height: 20px;
+		line-height: 20px;
+		color: #ff6700;
+		margin-left: -35px;
+		border: 1px solid #ff6700;
+		text-align: center;
+	}
+	.header .header-nav-content .loader{
+		margin-top: 50px;
+	}
+	.header .header-nav .cate{
+		position: absolute;
+		top: 100px;
+		left: 178px;
+		z-index: 999;
+		width: 234px;
+		height: 0px;
+		border: 1px solid #ff6700;
+		padding: 20px 0px;
+		box-sizing: border-box;
+		background: #fff;
+		overflow: hidden;
+	}
+	.header .header-nav .header-nav-category>a:hover .cate{
+		height: 460px;
+	} 
+	.header .header-nav .cate .cate-item{
+		height: 42px;
+		line-height: 42px;
+		padding: 0px 30px;
+		font-size: 14px;
+		color: #424242;
+		cursor: pointer;
+	}
+	.header .header-nav .cate .cate-item.active{
+		background: #ff6700;
+	}
+	.header .header-nav .cate .cate-item a{
+		position: relative;
+		display: block;
+		font-size: 14px;
+		color: #424242;
+	}
+	.header .header-nav .cate .cate-item i{
+		float: right;
+		font-size: 16px;
+		color: #e0e0e0;
+	}
+	.header .header-nav .cate-content{
+		display: none;
+		position: absolute;
+		top: 0;
+		left: 234px;
+		min-width: 500px;
+		height: 460px;
+		background-color: #fff;
+		box-sizing: border-box;
+		box-shadow: 0 2px 2px 2px rgba(0,0,0,0.15);
+		z-index: 9999;
+	}
+	.header .header-nav .cate-content .children-list{
+		float: left;
+		height: 460px;
+		width: 248px;
+	}
+	.header .header-nav .cate-content li{
+		float: left;
+		width: 248px;
+		height: 76px;
+	}
+	.header .header-nav .cate-content li:hover span{
+		color: #ff6700;
+		transition: all 0.3s;
+	}
+	.header .header-nav .cate-content li a{
+		display: block;
+		padding: 18px 20px;
+		color: #333;
+	}
+	.header .header-nav .cate-content li a img{
+		width: 40px;
+		height: 40px;
+		vertical-align: middle;
+	}
+	.header .header-nav .cate-content li a span{
+		color: #333;
+		text-align: center;
+		font-size: 14px;
 	}
 	.header .search{
 		position: relative;
