--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -23,11 +23,6 @@
 	transform: translateY(-8px);
 }
 
-
-
-
-
-
 /*顶部区域开始*/
 	.top{
 		height: 40px;
@@ -197,22 +192,21 @@
 	.header .header-nav-content .loader{
 		margin-top: 50px;
 	}
+
 	.header .header-nav .cate{
+		display: none;
 		position: absolute;
 		top: 100px;
-		left: 178px;
+		left: 60px;
 		z-index: 999;
 		width: 234px;
-		height: 0px;
+		height: 460px;
 		border: 1px solid #ff6700;
 		padding: 20px 0px;
 		box-sizing: border-box;
 		background: #fff;
 		overflow: hidden;
 	}
-	.header .header-nav .header-nav-category>a:hover .cate{
-		height: 460px;
-	} 
 	.header .header-nav .cate .cate-item{
 		height: 42px;
 		line-height: 42px;
@@ -238,8 +232,8 @@
 	.header .header-nav .cate-content{
 		display: none;
 		position: absolute;
-		top: 0;
-		left: 234px;
+		top: 101px;
+		left: 294px;
 		min-width: 500px;
 		height: 460px;
 		background-color: #fff;
@@ -620,7 +614,7 @@
 	.index-needhelp .content{
 		background: #fff;
 	}
-	.index-needhelp .content .tab-title li{
+	.index-needhelp .content .tab-title .yangshi{
 		float: left;
 		width: 14.28%;
 		color: #333;
@@ -629,21 +623,17 @@
 		text-align: center;
 		border-bottom: 1px solid #f5f5f5;
 	}
-	.index-needhelp .content .tab-title li.active{
+	.index-needhelp .content .tab-title .yangshi.question-active{
 		color: #fff;
 		background: #ff6700;
 		border-bottom: 1px solid #f60;
 	}
-	.index-needhelp .content .tab-title li:hover{
-		color: #fff;
-		background: #ff6700;
-		border-bottom: 1px solid #f60;
-	} 
-	.index-needhelp .content .tab-content .per{
+	.index-needhelp .content .tab-content .per.xianshi-active{
 		padding: 30px 0 16px 0;
 		text-align: center;
+		display: block;
 	}
-	.index-needhelp .content .tab-content .per li{
+	.index-needhelp .content .tab-content .per .juti{
 		float: left;
 		width: 44%;
 		margin-left: 6%;
@@ -653,7 +643,10 @@
 		text-align: center;
 		list-style: disc;
 	}
-	.index-needhelp .content .tab-content .per li a{
+	.index-needhelp .content .tab-content .per .juti-active{
+		color: #ff6700;
+	}
+	.index-needhelp .content .tab-content .per .juti .alj{
 		/*float: left;*/
 		display: block;
 		width: 87%;
@@ -668,19 +661,20 @@
 	.index-needhelp .content .tab-content .per li:hover{
 		color: #ff6700;
 	}
-	.index-needhelp .content .tab-content .per li:hover a{
+	.index-needhelp .content .tab-content .per li:hover .alj{
 		color: #ff6700;
-	}
-	.index-needhelp .content .tab-content .per>a{
+	} 
+	 .index-needhelp .content .tab-content .per>.gengduo{
 		display: block;
 		font-size: 16px;
 		color: #000;
 		opacity: 0.5;
+		text-align: center;
 	}
-	.index-needhelp .content .tab-content .per>a:hover{
+	.index-needhelp .content .tab-content .per>.gengduo:hover{
 		color: #ff6700;
 		opacity: 1;
-	}
+	} 
 	.index-contact{
 		/*margin-bottom: 100px;*/
 	}
